// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render component 1`] = `
<DocumentFragment>
  <div
    class="grid"
  >
    <div
      class="item colSpan colSpan-6 space-before-0 space-after-0"
    />
    <div
      class="item colSpan colSpan-12 space-before-0 space-after-0"
    >
      <table
        class="roleAssignments"
      >
        <tbody>
          <tr
            class="roleAssignment"
          >
            <td>
              Role Name 5
            </td>
            <td>
              Sulu
            </td>
            <td
              class="locale"
            >
              <div
                class="select"
                role="none"
              >
                <button
                  class="displayValue default"
                  type="button"
                >
                  <div
                    aria-label="sulu_admin.all_selected"
                    class="croppedText"
                    title="sulu_admin.all_selected"
                  >
                    <div
                      aria-hidden="true"
                      class="front"
                    >
                      sulu_admin.a
                    </div>
                    <div
                      aria-hidden="true"
                      class="back"
                    >
                      <span>
                        ll_selected
                      </span>
                    </div>
                    <div
                      class="whole"
                    >
                      sulu_admin.all_selected
                    </div>
                  </div>
                  <span
                    aria-label="su-angle-down"
                    class="su-angle-down toggle"
                  />
                </button>
              </div>
            </td>
          </tr>
          <tr
            class="roleAssignment"
          >
            <td>
              Role Name 23
            </td>
            <td>
              Sulu
            </td>
            <td
              class="locale"
            >
              <div
                class="select"
                role="none"
              >
                <button
                  class="displayValue default"
                  type="button"
                >
                  <div
                    aria-label="de"
                    class="croppedText"
                    title="de"
                  >
                    <div
                      aria-hidden="true"
                      class="front"
                    >
                      d
                    </div>
                    <div
                      aria-hidden="true"
                      class="back"
                    >
                      <span>
                        e
                      </span>
                    </div>
                    <div
                      class="whole"
                    >
                      de
                    </div>
                  </div>
                  <span
                    aria-label="su-angle-down"
                    class="su-angle-down toggle"
                  />
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render component in disabled state 1`] = `
<DocumentFragment>
  <div
    class="grid"
  >
    <div
      class="item colSpan colSpan-6 space-before-0 space-after-0"
    />
    <div
      class="item colSpan colSpan-12 space-before-0 space-after-0"
    >
      <table
        class="roleAssignments"
      >
        <tbody>
          <tr
            class="roleAssignment disabled"
          >
            <td>
              Role Name 5
            </td>
            <td>
              Sulu
            </td>
            <td
              class="locale"
            >
              <div
                class="select"
                role="none"
              >
                <button
                  class="displayValue default"
                  disabled=""
                  type="button"
                >
                  <div
                    aria-label="sulu_admin.all_selected"
                    class="croppedText"
                    title="sulu_admin.all_selected"
                  >
                    <div
                      aria-hidden="true"
                      class="front"
                    >
                      sulu_admin.a
                    </div>
                    <div
                      aria-hidden="true"
                      class="back"
                    >
                      <span>
                        ll_selected
                      </span>
                    </div>
                    <div
                      class="whole"
                    >
                      sulu_admin.all_selected
                    </div>
                  </div>
                  <span
                    aria-label="su-angle-down"
                    class="su-angle-down toggle"
                  />
                </button>
              </div>
            </td>
          </tr>
          <tr
            class="roleAssignment disabled"
          >
            <td>
              Role Name 23
            </td>
            <td>
              Sulu
            </td>
            <td
              class="locale"
            >
              <div
                class="select"
                role="none"
              >
                <button
                  class="displayValue default"
                  disabled=""
                  type="button"
                >
                  <div
                    aria-label="de"
                    class="croppedText"
                    title="de"
                  >
                    <div
                      aria-hidden="true"
                      class="front"
                    >
                      d
                    </div>
                    <div
                      aria-hidden="true"
                      class="back"
                    >
                      <span>
                        e
                      </span>
                    </div>
                    <div
                      class="whole"
                    >
                      de
                    </div>
                  </div>
                  <span
                    aria-label="su-angle-down"
                    class="su-angle-down toggle"
                  />
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render component without data 1`] = `
<DocumentFragment>
  <div
    class="grid"
  >
    <div
      class="item colSpan colSpan-6 space-before-0 space-after-0"
    />
  </div>
</DocumentFragment>
`;
